--- a/web/vue/package.json
+++ b/web/vue/package.json
@@ -20,6 +20,7 @@
     "macaddress": "^0.5.2",
     "path-parse": "^1.0.7",
     "qs": "^6.5.1",
+    "serialize-javascript": "^3.1.0",
     "tar": "^6.1.11",
     "uglify-es": "^3",
     "uglify-js": "^3.13",
