--- a/web/vue/package.json
+++ b/web/vue/package.json
@@ -11,19 +11,23 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@babel/core": "^7.11.0",
     "@babel/eslint-parser": "^7.15.7",
     "axios": "^0.21.1",
     "browserslist": "^4",
     "chokidar": "^3",
     "core-js": "^3",
-    "element-ui": "^2.3.6",
+    "element-ui": "^2.15.6",
+    "eslint-webpack-plugin": "^3.0.1",
     "macaddress": "^0.5.2",
+    "mini-css-extract-plugin": "^2.3.0",
     "path-parse": "^1.0.7",
+    "postcss": "^8.1.0",
     "qs": "^6.5.1",
-    "serialize-javascript": "^3.1.0",
+    "serialize-javascript": "^6.0.0",
     "tar": "^6.1.11",
-    "uglify-es": "^3",
-    "uglify-js": "^3.13",
+    "uglify-es": "^3.3.10",
+    "uglify-js": "^3.14.2",
     "uuid": "8",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
@@ -31,7 +35,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.3.4",
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -45,14 +49,12 @@
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.18.0",
-    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^6.2.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.3.2",
     "node-notifier": "^10.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
@@ -66,7 +68,7 @@
     "shelljs": "^0.8.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.1",
-    "vue-loader": "^15.9.8",
+    "vue-loader": "^16.6.0",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^5.53.0",
