--- a/web/vue/package.json
+++ b/web/vue/package.json
@@ -5,13 +5,13 @@
   "author": "ouqiang <qingqianludao@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
   "dependencies": {
-    "@babel/core": "^7.11.0",
+    "@babel/core": "^7.15.5",
     "@babel/eslint-parser": "^7.15.7",
     "axios": "^0.21.1",
     "browserslist": "^4",
@@ -73,6 +73,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^5.53.0",
     "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1",
     "webpack-merge": "^5.8.0"
   },
